# reproducr

./: .gitignore  README.md  cleaning.md  cleaning.sql  data-analytics.ipynb  database.py  descriptives.py  example_efetch.xml  main.py  parser.py  pubmed.py  pyproject.toml  robots.py  tester.ipynb
archived/: scraper.py  tester.ipynb
