[project]
name = "reproducr"
version = "0.1.0"
description = "Coursework investigating reproducible research, with an emphasis on data collection and cleaning."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]
